# rust-game-tracker

./: .gitignore  Cargo.toml  LICENSE  README.md  install.ps1  playtime.json  uninstall.ps1  update.ps1
.github/workflows/: ci.yml
src/: lib.rs  main.rs
